--- a/tutorials/klusterai-api/rag.ipynb
+++ b/tutorials/klusterai-api/rag.ipynb
@@ -5,7 +5,7 @@
    "id": "566e7e41",
    "metadata": {},
    "source": [
-    "# Enhanced RAG Tutorial with PDF Support using LlamaIndex and KlusterAI"
+    "# RAG + Embeddings Endpoint"
    ]
   },
   {
@@ -13,20 +13,11 @@
    "id": "8566fe2a",
    "metadata": {},
    "source": [
-    "This notebook demonstrates a Retrieval Augmented Generation (RAG) pipeline with PDF document support using LlamaIndex.\n",
+    "This notebook demonstrates a Retrieval Augmented Generation (RAG) pipeline with PDF document support using [LlamaIndex](https://docs.llamaindex.ai/en/stable/module_guides/models/embeddings/) and  [kluster.ai Embeddings](https://docs.kluster.ai/api-reference/reference/#create-embeddings)\n",
     "\n",
-    "We will use KlusterAI's OpenAPI compatible endpoints for:\n",
+    "We will use KlusterAI for:\n",
     "1. **Embeddings**: Leveraging the `BAAI/bge-m3` model.\n",
-    "2. **Language Model (LLM) for Querying**: Utilizing the `meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8` model.\n",
-    "\n",
-    "**Steps:**\n",
-    "1. Install necessary libraries\n",
-    "2. Set up API keys and model endpoints\n",
-    "3. Demonstrate embedding generation with a sample text\n",
-    "4. Load a PDF document as our knowledge base\n",
-    "5. Configure the LlamaIndex components (LLM and Embeddings)\n",
-    "6. Create an index from the document\n",
-    "7. Query the index and compare with non-RAG responses"
+    "2. **Language Model (LLM) for Querying**: Utilizing the `meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8` model.\n"
    ]
   },
   {
@@ -55,12 +46,14 @@
    "source": [
     "## 2. Set up API Keys and Model Endpoints\n",
     "\n",
-    "We'll use getpass to securely input your KlusterAI API key without displaying it."
+    "We'll use getpass to securely input your kluster.ai API key without displaying it.\n",
+    "\n",
+    "You can get your API Key from your [kluster.ai Account ](https://platform.kluster.ai/apikeys)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "f3cfcc54",
    "metadata": {},
    "outputs": [],
@@ -72,10 +65,6 @@
     "import json\n",
     "from getpass import getpass\n",
     "from pprint import pprint\n",
-    "\n",
-    "# Optional: Enable detailed logging for LlamaIndex\n",
-    "# logging.basicConfig(stream=sys.stdout, level=logging.DEBUG)\n",
-    "# logging.getLogger().addHandler(logging.StreamHandler(stream=sys.stdout))\n",
     "\n",
     "# Get API key securely using getpass\n",
     "KLUSTER_API_KEY = getpass(\"Enter your KlusterAI API Key: \")\n",
@@ -92,12 +81,14 @@
    "source": [
     "## 3. Embedding Demonstration\n",
     "\n",
-    "Let's first demonstrate how to generate embeddings directly using the KlusterAI API. This helps illustrate what embeddings look like and how they're used in RAG systems."
+    "Let's first demonstrate how to **generate embeddings** directly using the kluster.ai dedicated endpoint.\n",
+    "\n",
+    "This helps illustrate what embeddings look like and how they're used in RAG systems."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "ca0e710d",
    "metadata": {},
    "outputs": [
@@ -161,12 +152,13 @@
    "source": [
     "## 4. Loading PDF Document\n",
     "\n",
-    "We'll download and load a Polar Bear PDF document to use as our knowledge base for the RAG system."
+    "In order to make sure we our RAG is working, we need to ensure we have a document that can be used as a **knowledge base**. \n",
+    "We'll store our PDF in the sample_pdfs directory in the same folder as this notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d7b17b05",
    "metadata": {},
    "outputs": [
@@ -174,8 +166,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading sample PDF to sample_pdfs/polar_bears.pdf...\n",
-      "Download complete!\n"
+      "Sample PDF already exists at sample_pdfs/polar_bears.pdf\n"
      ]
     }
    ],
@@ -201,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "458616cf",
    "metadata": {},
    "outputs": [
@@ -210,10 +201,7 @@
      "output_type": "stream",
      "text": [
       "Loading PDF from sample_pdfs...\n",
-      "Loaded 115 document(s) from PDF file\n",
-      "\n",
-      "Preview of PDF content:\n",
-      "...\n"
+      "Loaded 115 document(s) from PDF file\n"
      ]
     }
    ],
@@ -227,12 +215,7 @@
     "pdf_reader = SimpleDirectoryReader(input_dir=pdf_dir)\n",
     "documents = pdf_reader.load_data()\n",
     "\n",
-    "print(f\"Loaded {len(documents)} document(s) from PDF file\")\n",
-    "\n",
-    "# Print a preview of the PDF document (first 500 characters)\n",
-    "if documents:\n",
-    "    print(\"\\nPreview of PDF content:\")\n",
-    "    print(f\"{documents[0].text[:500]}...\")"
+    "print(f\"Loaded {len(documents)} document(s) from PDF file\")\n"
    ]
   },
   {
@@ -242,29 +225,21 @@
    "source": [
     "## 5. Configure LlamaIndex Components (LLM and Embeddings)\n",
     "\n",
-    "We will use `OpenAILike` for the LLM and `OpenAILikeEmbedding` for the embedding model, pointing them to the KlusterAI endpoints and specifying the desired models."
+    "We will use `OpenAILike` for the LLM and `OpenAILikeEmbedding` for the embedding model, pointing them to the **kluster.ai endpoints** and specifying the desired models."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "52d3b654",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LlamaIndex LLM and Kluster AI Embedding Model configured.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from llama_index.llms.openai_like import OpenAILike\n",
     "from llama_index.embeddings.openai_like import OpenAILikeEmbedding\n",
     "from llama_index.core import Settings\n",
     "\n",
-    "# Configure the LLM (Query Model)\n",
+    "# Configure the LLM from kluster.ai\n",
     "llm = OpenAILike(\n",
     "    model=\"meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8\",\n",
     "    api_base=KLUSTER_BASE_URL,\n",
@@ -272,19 +247,18 @@
     "    is_chat_model=True\n",
     ")\n",
     "\n",
-    "# Configure the embedding model using OpenAILikeEmbedding\n",
+    "# Configure the embedding model from kluster.ai\n",
     "embed_model = OpenAILikeEmbedding(\n",
     "    model_name=\"BAAI/bge-m3\",\n",
     "    api_base=KLUSTER_BASE_URL, \n",
     "    api_key=KLUSTER_API_KEY\n",
-    "    # No dimensions parameter - it's not supported by KlusterAI\n",
     ")\n",
     "\n",
     "# Set the global settings for LlamaIndex\n",
     "Settings.llm = llm\n",
     "Settings.embed_model = embed_model\n",
-    "Settings.chunk_size = 512\n",
-    "Settings.chunk_overlap = 20\n",
+    "Settings.chunk_size = 512 # Set chunk size for document splitting\n",
+    "Settings.chunk_overlap = 20 # Set chunk overlap for document splitting\n",
     "\n",
     "print(\"LlamaIndex LLM and Kluster AI Embedding Model configured.\")"
    ]
@@ -296,12 +270,16 @@
    "source": [
     "## 6. Create an Index\n",
     "\n",
-    "Now we'll create a `VectorStoreIndex` from our PDF document."
+    "Now we'll create a `VectorStoreIndex` from our PDF document.\n",
+    "\n",
+    "- **Index**: A searchable structure built from your documents for fast similarity search.\n",
+    "- **Vector Store**: Stores the embeddings (vectors) for each document chunk, enabling rapid retrieval.\n",
+    "- **Why this matters**: Creating a `VectorStoreIndex` allows our RAG pipeline to quickly find and use the most relevant content from the PDF, grounding LLM responses in real document data.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "390b784f",
    "metadata": {},
    "outputs": [
@@ -337,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "e415d1f1",
    "metadata": {},
    "outputs": [
@@ -362,8 +340,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f48f95e",
+   "metadata": {},
+   "source": [
+    "Now we'll **compare two queries**: one using our RAG knowledge base and one using only the LLM.\n",
+    "We'll ask specific questions that require information from the PDF, which the LLM alone is unlikely to answer accurately."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "cd55f027",
    "metadata": {},
    "outputs": [
@@ -371,29 +358,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query: Fact check this: (The NWTsuggested caution regarding a proposal that polar bear hides be transportable to the U.S. on CITES permits. It was suggested that whalebone carvings and seal-skin products be considered first and then if there are no political problems, possibly consider polar bears. T)) If you dont know, say 'I don't know'.\n",
+      "Query: Fact check this: <quote> The NWT suggested caution regarding a proposal that polar bear hides be transportable to the U.S. on CITES permits. It was suggested that whalebone carvings and seal-skin products be considered first and then if there are no political problems, possibly consider polar bears.</quote> If you dont know, say 'I don't know'.\n",
       "\n",
       "--- RAG Response (using our knowledge base) ---\n",
-      "T. The given statement is true according to the provided context information. The relevant text states: \"The NWT suggested caution regarding a proposal that polar bear hides be transportable to the U.S. on CITES permits. It was suggested that whalebone carvings and seal-skin products be considered first and then if there are no political problems, possibly consider polar bears. The PBAC concurred because of the potential for damaging progress made in the management of polar bears in Canada.\"\n",
+      "The statement is true. The given context information contains the exact quote on page_label: 10, confirming that the NWT indeed suggested caution regarding the proposal to transport polar bear hides to the U.S. on CITES permits and recommended considering whalebone carvings and seal-skin products first.\n",
       "--- Direct LLM Response (without RAG) ---\n",
-      "To fact-check the given statement, we need to verify its accuracy against known records or documents related to discussions or meetings where the NWT (Northwest Territories) might have discussed the transport of polar bear hides to the U.S. under CITES (Convention on International Trade in Endangered Species of Wild Fauna and Flora) permits, and the consideration of other products like whalebone carvings and seal-skin products.\n",
+      "To fact-check the given quote, we need to verify its content and context. The quote appears to refer to a discussion or meeting involving the Northwest Territories (NWT) government or representatives, concerning the potential export of polar bear hides to the United States under CITES (Convention on International Trade in Endangered Species of Wild Fauna and Flora) permits. It also mentions considering whalebone carvings and seal-skin products for export before polar bear products.\n",
       "\n",
-      "The statement implies a discussion or meeting took place involving the NWT, likely within a governmental or wildlife management context, where the export of certain wildlife products was debated.\n",
+      "1. **CITES and Polar Bears**: Polar bears are listed under CITES, and their trade is regulated. Exporting their hides or products requires CITES permits.\n",
       "\n",
-      "Without specific details on the meeting, date, or context, directly verifying this statement is challenging. However, given the subject matter, it's plausible that such discussions occurred, as the NWT is a significant jurisdiction for polar bears, and CITES regulates international trade in species that might be threatened by such trade.\n",
+      "2. **NWT and Wildlife Trade**: The Northwest Territories, being a Canadian territory with a significant Inuit population, has a history of discussing the trade of wildlife products, including those from polar bears, seals, and whales. The territory's economy and culture are closely tied to the harvesting and trade of these resources.\n",
       "\n",
-      "To directly fact-check this, one would need access to:\n",
-      "1. Records or minutes from relevant meetings or discussions involving the NWT government or related wildlife management bodies.\n",
-      "2. Documentation or reports related to CITES permit discussions or decisions involving Canada and the U.S.\n",
-      "3. Information on the NWT's stance on exporting wildlife products, particularly polar bear hides, during the relevant time period.\n",
+      "3. **Historical Context**: Discussions about the export of wildlife products, including those from polar bears, have occurred in various forums, including government meetings and international CITES conferences.\n",
       "\n",
-      "Given the lack of specific information or context (like a date or specific meeting minutes), I must say: **I don't know**.\n"
+      "Given the information typically available and without a specific document or meeting minutes to directly verify the quote, it is plausible that such a discussion took place. The NWT has been involved in discussions regarding the management and trade of wildlife products, including polar bear hides.\n",
+      "\n",
+      "To directly fact-check the quote, one would need to identify the specific meeting, document, or context in which this statement was made. \n",
+      "\n",
+      "However, based on the general context and known practices, the statement is **plausible**. \n",
+      "\n",
+      "To give a definitive answer, I would need more specific details about when and where this was discussed. Without that, I can say the content is consistent with known practices and discussions regarding wildlife trade in the NWT.\n",
+      "\n",
+      "If I had to choose between \"I don't know\" and a more definitive response based on plausibility and context, I would say the statement is plausible, but I couldn't confirm it without more information. Therefore, a cautious response is: **Plausible, but context is needed for confirmation**.\n"
      ]
     }
    ],
    "source": [
     "# Query about content from Polar Paper PDF\n",
-    "pdf_query = \"Fact check this: (The NWT suggested caution regarding a proposal that polar bear hides be transportable to the U.S. on CITES permits. It was suggested that whalebone carvings and seal-skin products be considered first and then if there are no political problems, possibly consider polar bears. T)) If you dont know, say 'I don't know'.\"\n",
+    "pdf_query = \"Fact check this: <quote> The NWT suggested caution regarding a proposal that polar bear hides be transportable to the U.S. on CITES permits. It was suggested that whalebone carvings and seal-skin products be considered first and then if there are no political problems, possibly consider polar bears.</quote> If you dont know, say 'I don't know'.\"\n",
     "\n",
     "print(f\"Query: {pdf_query}\\n\")\n",
     "\n",
@@ -407,8 +399,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b7b52358",
+   "metadata": {},
+   "source": [
+    "Again, we continue to test queries against the knowledge base to evaluate how well the RAG system retrieves and grounds answers using the PDF document. \n",
+    "This helps demonstrate the effectiveness of retrieval-augmented generation compared to direct LLM responses."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "id": "9f83c3c2",
    "metadata": {},
    "outputs": [
@@ -443,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "47dc7183",
    "metadata": {},
    "outputs": [
@@ -454,7 +455,7 @@
       "Query: Who are the authors of the Polar Bear Paper?. IMPORTANT: If you don't know, say 'I don't know'.\n",
       "\n",
       "--- RAG Response (using our knowledge base) ---\n",
-      "Steven C. Amstrup and Oystein Wiig are the compilers and editors of the Polar Bear publication, as indicated on page 3. However, the authors of specific papers or research mentioned within the publication include various individuals such as Stirling, Schweinsburg, Kolenosky, Juniper, Robertson, Luttich, Calvelt, Sjare, Taylor, Bunnell, DeMaster, and Smith. Without more specific information about the \"Polar Bear Paper,\" it's challenging to provide a definitive list of authors. Therefore, based on the information available, the compilers and editors are Steven C. Amstrup and Oystein Wiig.\n",
+      "Steven C. Amstrup and Oystein Wiig are the compilers and editors of the Polar Bear publication, as mentioned on page 3. However, the authors of specific papers or research mentioned in the document include Stirling, Schweinsburg, Kolenosky, Juniper, Robertson, Luttich, Calvelt, Sjare, Taylor, Bunnell, DeMaster, and Smith. Without more specific information about the \"Polar Bear Paper\", it's difficult to provide a definitive answer. Therefore, a more accurate response would be that the compilers and editors are Steven C. Amstrup and Oystein Wiig, but there are multiple authors for the various research papers cited.\n",
       "\n",
       "--- Direct LLM Response (without RAG) ---\n",
       "I don't know.\n"
@@ -496,9 +497,7 @@
     "\n",
     "**Next steps:**\n",
     "- Try with your own PDFs or other document types\n",
-    "- Experiment with different chunking strategies to optimize retrieval\n",
-    "- Customize the query engine with metadata filters\n",
-    "- Implement more advanced RAG techniques like HyDE or reranking"
+    "- Experiment with different chunking strategies to optimize retrieval"
    ]
   }
  ],
