Apply suggestions from code review
Co-authored-by: Kevin Neilson <kevin@papermoon.io>

--- a/tutorials/klusterai-api/llm-as-a-judge.ipynb
+++ b/tutorials/klusterai-api/llm-as-a-judge.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "How can we test a model's accuracy when the ground truth is unavailable? One approach could be to test the predictions made by the base model against a larger model, which, comparatively, should do better.\n",
     "\n",
-    "This tutorial uses a base model (`Llama-3.1-8B-Instruct-Turbo`) to classify a dataset based on a description. Next, we will use a larger model (`klusterai/Meta-Llama-3.3-70B-Instruct-Turbo`) as a judge, tasked to determine whether the base model's predicitions are correct. Since the dataset also contains the ground truth, the notebook also assesses how well the judge model performed.\n",
+    "This tutorial uses a base model (`Llama-3.1-8B-Instruct-Turbo`) to classify a dataset based on a description. Next, we will use a larger model (`klusterai/Meta-Llama-3.3-70B-Instruct-Turbo`) as a judge, tasked to determine whether the base model's predictions are correct. Since the dataset also contains the ground truth, the notebook also assesses how well the judge model performed.\n",
     "\n",
     "A great breakdown on calculating a model's accuracy can be found in our <a href=\"/tutorials/klusterai-api/model-comparison/\" target=\"_blank\"> model comparison notebook</a>.\n",
     "\n",
@@ -476,7 +476,7 @@
     "\n",
     "Please refer to the <a href=\"/get-started/models/#model-comparison-table\" target=\"_blank\">Supported models</a> section for a list of the models we support.\n",
     "\n",
-    "For the base model, the prompt is pretty similar to that of the <a href=\"/tutorials/klusterai-api/text-classification/text-classification-openai-api/\" target=\"_blank\">text classification notebook</a>, where we ask to classify each move genre based of a description, and providing a specific set of options as possible genres."
+    "For the base model, the prompt is pretty similar to that of the <a href=\"/tutorials/klusterai-api/text-classification/text-classification-openai-api/\" target=\"_blank\">text classification notebook</a>, where we ask to classify each movie genre based on a description, and providing a specific set of options as possible genres."
    ]
   },
   {
@@ -677,7 +677,7 @@
     "    - All other letters in the base model answer (enclosed in double quotes) must be lowercase. Otherwise, the evaluation should be ‘incorrect’.\n",
     "    - If the base model answer consists of multiple words, the evaluation should be ‘incorrect’.\n",
     "    - If the base model answer includes punctuation, spaces, or additional characters, the evaluation should be ‘incorrect’.\n",
-    "    - If the base model answer (enclosed in double quotes) is one of the provided genres, the evaluation should be ‘incorrect’. \n",
+    "    - If the base model answer (enclosed in double quotes) is not one of the provided genres, the evaluation should be ‘incorrect’. \n",
     "    - If it is not listed, the evaluation should be ‘incorrect’.\n",
     "    \n",
     "    Output Rules:\n",
