polishing and matching tone

--- a/tutorials/klusterai-api/rag.ipynb
+++ b/tutorials/klusterai-api/rag.ipynb
@@ -13,11 +13,12 @@
    "id": "8566fe2a",
    "metadata": {},
    "source": [
-    "This notebook demonstrates a Retrieval Augmented Generation (RAG) pipeline with PDF document support using [LlamaIndex](https://docs.llamaindex.ai/en/stable/module_guides/models/embeddings/) and  [kluster.ai Embeddings](https://docs.kluster.ai/api-reference/reference/#create-embeddings)\n",
+    "We'll learn how to use our [embeddings endpoint](https://docs.kluster.ai/api-reference/reference/#create-embeddings) in a Retrieval Augmented Generation (RAG) pipeline with PDF document support using [LlamaIndex](https://docs.llamaindex.ai/en/stable/module_guides/models/embeddings/)\n",
     "\n",
-    "We will use KlusterAI for:\n",
-    "1. **Embeddings**: Leveraging the `BAAI/bge-m3` model.\n",
-    "2. **Language Model (LLM) for Querying**: Utilizing the `meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8` model.\n"
+    "\n",
+    "**Models:**\n",
+    "1. **Embeddings**: Leveraging the [BAAI/bge-m3](https://platform.kluster.ai/models) model.\n",
+    "2. **Language Model (LLM) for Querying**: Utilizing the [meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8](https://platform.kluster.ai/playground?model=meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8) model.\n"
    ]
   },
   {
@@ -25,7 +26,7 @@
    "id": "82108a06",
    "metadata": {},
    "source": [
-    "## 1. Install Necessary Libraries"
+    "### Setup and Pre-requisites\n"
    ]
   },
   {
@@ -36,7 +37,7 @@
    "outputs": [],
    "source": [
     "# Install the necessary packages, including the PDF reader for LlamaIndex\n",
-    "!pip install llama-index llama-index-llms-openai-like llama-index-embeddings-openai-like llama-index-readers-file requests"
+    "%pip install llama-index llama-index-llms-openai-like llama-index-embeddings-openai-like llama-index-readers-file requests"
    ]
   },
   {
@@ -44,7 +45,7 @@
    "id": "25590afc",
    "metadata": {},
    "source": [
-    "## 2. Set up API Keys and Model Endpoints\n",
+    "### API Keys and Model Endpoints\n",
     "\n",
     "We'll use getpass to securely input your kluster.ai API key without displaying it.\n",
     "\n",
@@ -79,7 +80,7 @@
    "id": "99d4865a",
    "metadata": {},
    "source": [
-    "## 3. Embedding Demonstration\n",
+    "## Embedding Demonstration\n",
     "\n",
     "Let's first demonstrate how to **generate embeddings** directly using the kluster.ai dedicated endpoint.\n",
     "\n",
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "ca0e710d",
    "metadata": {},
    "outputs": [
@@ -108,41 +109,32 @@
     }
    ],
    "source": [
-    "def generate_embedding(text):\n",
-    "    \"\"\"Generate embeddings for the given text using KlusterAI API\"\"\"\n",
-    "    headers = {\n",
-    "        \"Authorization\": f\"Bearer {KLUSTER_API_KEY}\",\n",
-    "        \"Content-Type\": \"application/json\"\n",
-    "    }\n",
-    "    \n",
-    "    response = requests.post(\n",
-    "        f\"{KLUSTER_BASE_URL}/embeddings\",\n",
-    "        headers=headers,\n",
-    "        json={\n",
-    "            \"model\": \"BAAI/bge-m3\",\n",
-    "            \"input\": text,\n",
-    "            \"encoding_format\": \"float\"\n",
-    "        }\n",
-    "    )\n",
-    "    \n",
-    "    if response.status_code != 200:\n",
-    "        raise Exception(f\"Error generating embedding: {response.text}\")\n",
-    "        \n",
-    "    return response.json()\n",
+    "from openai import OpenAI\n",
+    "\n",
+    "# Configure kluster.ai client\n",
+    "client = OpenAI(\n",
+    "    base_url=KLUSTER_BASE_URL,\n",
+    "    api_key=KLUSTER_API_KEY\n",
+    ")\n",
     "\n",
     "# Generate embedding for our example text about Paris\n",
     "sample_text = \"The capital of France is Paris. It is known for the Eiffel Tower.\"\n",
-    "embedding_result = generate_embedding(sample_text)\n",
     "\n",
-    "# Pretty print the first 10 dimensions of the embedding vector\n",
+    "response = client.embeddings.create(\n",
+    "    model=\"BAAI/bge-m3\",\n",
+    "    input=sample_text,\n",
+    "    encoding_format=\"float\"\n",
+    ")\n",
+    "\n",
+    "# Print the first 10 dimensions of the embedding vector\n",
     "print(f\"Sample text: '{sample_text}'\")\n",
-    "print(f\"Model used: {embedding_result['model']}\")\n",
-    "print(f\"Embedding dimensions: {len(embedding_result['data'][0]['embedding'])}\")\n",
+    "print(f\"Model used: {response.model}\")\n",
+    "print(f\"Embedding dimensions: {len(response.data[0].embedding)}\")\n",
     "print(\"\\nFirst 10 dimensions of the embedding vector:\")\n",
-    "print(embedding_result['data'][0]['embedding'][:10])\n",
+    "print(response.data[0].embedding[:10])\n",
     "\n",
     "# Show token usage information\n",
-    "print(f\"\\nToken usage: {embedding_result['usage']['prompt_tokens']} tokens\")"
+    "print(f\"\\nToken usage: {response.usage.prompt_tokens} tokens\")"
    ]
   },
   {
@@ -150,10 +142,11 @@
    "id": "91011ad2",
    "metadata": {},
    "source": [
-    "## 4. Loading PDF Document\n",
+    "## Adding a PDF Document\n",
     "\n",
     "In order to make sure we our RAG is working, we need to ensure we have a document that can be used as a **knowledge base**. \n",
-    "We'll store our PDF in the sample_pdfs directory in the same folder as this notebook."
+    "\n",
+    "We'll store our PDF in the `sample_pdfs` directory in the same folder as this notebook."
    ]
   },
   {
@@ -191,6 +184,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1d8dd11",
+   "metadata": {},
+   "source": [
+    "### Load document"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "458616cf",
@@ -223,9 +224,9 @@
    "id": "df42ac97",
    "metadata": {},
    "source": [
-    "## 5. Configure LlamaIndex Components (LLM and Embeddings)\n",
+    "## Configure LlamaIndex Components\n",
     "\n",
-    "We will use `OpenAILike` for the LLM and `OpenAILikeEmbedding` for the embedding model, pointing them to the **kluster.ai endpoints** and specifying the desired models."
+    "To setup [LlamaIndex](https://docs.llamaindex.ai/en/stable/) with **kluster.ai** we neesd to setup `OpenAILike` for the LLM and `OpenAILikeEmbedding` for the embedding model."
    ]
   },
   {
@@ -239,7 +240,7 @@
     "from llama_index.embeddings.openai_like import OpenAILikeEmbedding\n",
     "from llama_index.core import Settings\n",
     "\n",
-    "# Configure the LLM from kluster.ai\n",
+    "# Configure the LLM from kluster.ai with LlamaIndex\n",
     "llm = OpenAILike(\n",
     "    model=\"meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8\",\n",
     "    api_base=KLUSTER_BASE_URL,\n",
@@ -268,13 +269,14 @@
    "id": "c9cc04f1",
    "metadata": {},
    "source": [
-    "## 6. Create an Index\n",
+    "## Create an Index\n",
     "\n",
     "Now we'll create a `VectorStoreIndex` from our PDF document.\n",
     "\n",
     "- **Index**: A searchable structure built from your documents for fast similarity search.\n",
     "- **Vector Store**: Stores the embeddings (vectors) for each document chunk, enabling rapid retrieval.\n",
-    "- **Why this matters**: Creating a `VectorStoreIndex` allows our RAG pipeline to quickly find and use the most relevant content from the PDF, grounding LLM responses in real document data.\n"
+    "\n",
+    "**Why this matters**: Creating a `VectorStoreIndex` allows our RAG pipeline to quickly find and use the most relevant content from the PDF, grounding LLM responses in real document data.\n"
    ]
   },
   {
@@ -308,9 +310,10 @@
    "id": "1239a8c0",
    "metadata": {},
    "source": [
-    "## 7. Query the Index and Compare with Non-RAG Responses\n",
+    "### Query the Index and Compare with Non-RAG Responses\n",
     "\n",
-    "Now we'll compare responses using RAG (with our knowledge base) versus direct LLM responses without context."
+    "Now we'll compare responses using RAG (with our knowledge base) versus direct LLM responses without context.\n",
+    "First, let's start by creating the `query engine`"
    ]
   },
   {
@@ -344,6 +347,8 @@
    "id": "8f48f95e",
    "metadata": {},
    "source": [
+    "### Test your RAG\n",
+    "\n",
     "Now we'll **compare two queries**: one using our RAG knowledge base and one using only the LLM.\n",
     "We'll ask specific questions that require information from the PDF, which the LLM alone is unlikely to answer accurately."
    ]
