--- a/tutorials/klusterai-api/sentiment-analysis-api.ipynb
+++ b/tutorials/klusterai-api/sentiment-analysis-api.ipynb
@@ -25,7 +25,7 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "Sentiment analysis is the process of reviewing text to determine whether there is positive, neutral, or negative notation to the statement. LLMs can be extremely powerful, processing a lot of data quickly, helping understand the overall sentiment of a large dataset.\n",
+    "Sentiment analysis is the process of reviewing text to determine whether there is positive, neutral, or negative connotation to the statement. LLMs can be extremely powerful, processing a lot of data quickly, helping understand the overall sentiment of a large dataset.\n",
     "\n",
     "This tutorial runs through a notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API to run a sentiment analysis on sample data.\n",
     "\n",
