--- a/tutorials/klusterai-api/integrating-tools.ipynb
+++ b/tutorials/klusterai-api/integrating-tools.ipynb
@@ -30,6 +30,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "41ea62a1",
+   "metadata": {},
+   "source": [
+    "## Prerequisites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83111fd4",
+   "metadata": {},
+   "source": [
+    "Before getting started, ensure you have the following:\n",
+    "\n",
+    "- **A kluster.ai account** - sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one\n",
+    "- **A kluster.ai API key** - after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "xU1WBQJ7Uh09"
    },
