--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -94,7 +94,7 @@
    },
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter your kluster.ai API key:  ········\n"
@@ -969,7 +969,7 @@
    "source": [
     "### Start the job\n",
     "\n",
-    "Once all the files have been successfully uploaded, we're ready to start (create) the batch jobs by providing the file ID of each file, which we got in the previous step. To start each job, we use the `batches.create` method, for which we need to set the endpoint to `/v1/chat/completions`. This will return each batch job details, with each ID."
+    "Once all the files have been successfully uploaded, we're ready to start (create) the batch jobs by providing the file ID of each file, which we got in the previous step. To start each job, we use the `batches.create` method, for which we need to set the endpoint to `/v1/chat/completions`. This will return each batch job's details, with each ID."
    ]
   },
   {
@@ -1311,7 +1311,7 @@
     "- Data preparation: a subset of 1500 financial headlines was used, split into training and testing sets\n",
     "- Fine-tuning: we fine-tuned `klusterai/Meta-Llama-3.1-8B-Instruct-Turbo` using labeled training data and system prompts for targeted learning\n",
     "- Batch inference & evaluation: we compared the fine-tuned model with a much larger base model (`Llama3.3-70B`) and the original untuned `Llama3.1-8B`\n",
-    "- Performance: the fine-tuned model delivered **higher accuracy** than the untuned 8B model, and surprisingly, **outperformed** the 70B model — all at **lower inference cost**. Note that the results may vary depending on the fine-tuning hyperparemeters, temperature, among others\n",
+    "- Performance: the fine-tuned model delivered **higher accuracy** than the untuned 8B model, and surprisingly, **outperformed** the 70B model — all at **lower inference cost**. Note that the results may vary depending on the fine-tuning hyperparameters, temperature, among others\n",
     "\n",
     "This reinforces the value of fine-tuning for domain-specific tasks: improved performance, reduced cost, and faster inference. Moreover, with kluster.ai, we achieved all this using the OpenAI Python library and API, no changes needed!\n",
     "\n",
