Update fine tuning tutorial (#109)
* first draft

* llms

* feedback

* feedback

--- a/tutorials/klusterai-api/sentiment-analysis-api.ipynb
+++ b/tutorials/klusterai-api/sentiment-analysis-api.ipynb
@@ -25,7 +25,7 @@
     "id": "6d1d06ea-79c1-4f28-b312-0e5aabe18ff3"
    },
    "source": [
-    "Sentiment analysis is the process of reviewing text to determine whether there is positive, neutral, or negative notation to the statement. LLMs can be extremely powerful, processing a lot of data quickly, helping understand the overall sentiment of a large dataset.\n",
+    "Sentiment analysis is the process of reviewing text to determine whether there is positive, neutral, or negative connotation to the statement. LLMs can be extremely powerful, processing a lot of data quickly, helping understand the overall sentiment of a large dataset.\n",
     "\n",
     "This tutorial runs through a notebook where you'll learn how to use the <a href=\"https://kluster.ai/\" target=\"_blank\">kluster.ai</a> batch API to run a sentiment analysis on sample data.\n",
     "\n",
@@ -180,8 +180,6 @@
     "id": "QjCVfg65jKz6"
    },
    "source": [
-    "We've preloaded a sample dataset sourced from Amazon's reviews of musical instruments. This dataset contains customer feedback on various music-related products, ready for you to analyze. No further setup is required—just jump into the next steps to start working with the data.\n",
-    "\n",
     "Now that you've initialized an OpenAI-compatible client pointing to kluster.ai, we can talk about the data.\n",
     "\n",
     "This notebook includes a preloaded sample dataset sourced from Amazon's reviews of musical instruments. It contains customer feedback on various music-related products. No additional setup is needed. Proceed to the next steps to begin working with this data."
@@ -269,12 +267,8 @@
     "    Analyze the sentiment of this text and respond with one word: positive, negative, or neutral.\n",
     "    '''\n",
     "\n",
-    "# Models\n",
-    "#model=\"deepseek-ai/DeepSeek-R1\"\n",
-    "#model=\"deepseek-ai/DeepSeek-V3-0324\"\n",
-    "#model=\"klusterai/Meta-Llama-3.1-8B-Instruct-Turbo\"\n",
+    "# Model\n",
     "model=\"klusterai/Meta-Llama-3.3-70B-Instruct-Turbo\"\n",
-    "#model=\"Qwen/Qwen2.5-VL-7B-Instruct\"\n",
     "\n",
     "# Ensure the directory exists\n",
     "os.makedirs(\"sentiment_analysis\", exist_ok=True)\n",
@@ -686,7 +680,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
